# neopad

./: .gitignore  Cargo.toml  README.md
assets/sql/: 001_init_search_index.sql
src/: main.rs  main.slint
src/ui/: main.slint
