[package]
name = "launchpad"
version = "0.1.0"
edition = "2024"

[dependencies]
slint = "1.16.0"
i-slint-backend-winit = "1.16.0"
raw-window-handle = "0.6"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["NSScreen"] }

[build-dependencies]
slint-build = "1.16.0"
