[package]
name = "launchpad"
version = "0.1.0"
edition = "2024"

[dependencies]
slint = { version = "1.16.0", features = ["renderer-skia"] }
i-slint-backend-winit = "1.16.0"
raw-window-handle = "0.6"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["NSAppearance", "NSColor", "NSGraphics", "NSResponder", "NSScreen", "NSView", "NSVisualEffectView", "NSWindow"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.60.2", features = ["Win32_Foundation", "Win32_Graphics_Dwm", "Win32_UI_Controls"] }

[build-dependencies]
slint-build = "1.16.0"
